server/app/assets/stylesheets/consilium.css.scss
@import 'constants';

body {
  margin-top: $body-margin;

  h1 {
    font-size: 40px;
    font-weight: 100;
  }

  h2 {
    font-size: 32px;
    font-weight: 200;
  }

  h3 {
    font-size: 22px;
    font-weight: 200;
  }

  .alert {
    background: #cce1ef;
    padding: 20px;
    color: #163246;

    .alert-inner {
      display: table;

      * {
        display: table-cell;
      }

      i {
        padding-right: 20px;
        vertical-align: middle;
      }

      p {
        overflow: auto;
      }
    }
  }

  #main {
    overflow-x: hidden;
  }

  .center {
    text-align: center;
  }

  .hide {
    display: none;
  }

  .page-header {
    margin-top: 10px;
    margin-bottom: 30px;

    * {
      margin-top: 0;
      margin-bottom: 0;
    }

    .breadcrumbs {
      .divider {
        color: #ccc;
        font-weight: 200;
      }

      a, a:link, a:visited, a:hover, a:active {
        color: #08c;
        text-decoration: none;
      }
    }
  }

  hr.soften {
    margin: 20px 0;
    height: 1px;
    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
    border: 0;
  }

  .popover {
    $popover-width: $form-input-width + 155px;

    min-width: $popover-width;
    padding: 20px;
    top: 0;
    /** Hack. Not sure why we need to /4. */
    left: $nav-width/3;
    width: 100%;
    height: 100%;
    position: fixed;
    background-color: #fff;

    .popover-inner {
      width: $popover-width;
      margin: auto;
    }
  }

  .content {
    margin-left: $nav-width;
  }

  .align-right {
    text-align: right;
  }
}

